--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   persistent_bottom_nav_bar: ^5.0.2
   kartal: ^3.2.0
   badges: ^3.1.1
+  equatable: ^2.0.5
 
 dev_dependencies:
   flutter_test:
