--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,8 @@ dependencies:
   kartal: ^3.2.0
   badges: ^3.1.1
   equatable: ^2.0.5
+  easy_localization: ^3.0.2
+  google_mobile_ads: ^3.0.0
 
 dev_dependencies:
   flutter_test:
@@ -37,3 +39,4 @@ flutter:
   uses-material-design: true
   assets:
     - assets/images/
+    - assets/translation/
